--- a/Front-end/Projet/Breaking bad/index.html
+++ b/Front-end/Projet/Breaking bad/index.html
@@ -18,7 +18,7 @@
     <main>
         
         <section id="character">
-            <!-- <article class="single-character">
+            <article class="single-character">
                 
                 <h3> NOM DU PERSONNAGE</h3>
                 <div id="status"> <span class="circle"></span> status:</div>
@@ -33,7 +33,7 @@
 
 
 
-            </article> -->
+            </article>
         </section>
         <footer>
             <h2>Copyright 2022 - Bakari
